error overflow mobile resolve

--- a/css/style.css
+++ b/css/style.css
@@ -44,8 +44,8 @@ html {
 body{
     background-color: var(--Darkcyan);
     font-family: 'Kumbh Sans';
-    overflow: hidden;
 }
+
 
 
 /* Contenedor */
@@ -56,8 +56,8 @@ body{
     width: 100vw;
     height: 100vh;
     place-content: center;
+    position: relative;
     overflow: hidden;
-    /* overflow: scroll; */
 }
 
 
@@ -67,6 +67,7 @@ body{
     width: 100%;
     height: 70%;
     position: absolute;
+    overflow: hidden;
 }
 
 .bottom{
@@ -87,7 +88,7 @@ body{
 .tarjeta{
 width: 95%;
 height: auto;
-margin: 0 auto 2rem;
+margin: 0 auto;
 z-index: 1;
 display: flex;
 flex-direction: column;
@@ -100,14 +101,6 @@ border-radius: 1rem;
         width: 40%;
         height: auto;
         box-shadow: -.4rem 1.1rem 2.5rem 0rem hsl(227, 10%, 46%);
-    }
-
-    body{
-        overflow: hidden;
-    }
-
-    .contenedor{
-        overflow: hidden;
     }
 }
 
@@ -175,6 +168,7 @@ border-radius: 1rem;
 /* footer */
 
 .attribution{
+    margin-top: 4rem;
     text-align: center;
 }
 
